# openpilot

./: README.md  mkdocs.yml  pyproject.toml  readme_start.md  readme_zbs.md  sf_waybill.html
.github/workflows/: docs.yaml
docs/: CONTRIBUTING.md  CONTRIBUTING.md.zh  INTEGRATION.md  INTEGRATION.md.zh  LIMITATIONS.md  LIMITATIONS.md.zh  README.md
docs/car-porting/zh/: brand-port.md  model-port.md  what-is-a-car-port.md
docs/concepts/zh/: glossary.md  logs.md  safety.md
docs/contributing/zh/: roadmap.md
docs/getting-started/: what-is-openpilot.md
docs/getting-started/zh/: what-is-openpilot.md
docs/how-to/zh/: connect-to-comma.md  turn-the-speed-blue.md
docs/zh/: index.md
selfdrive/modeld/models/: README.md.zh
tools/: install_python_dependencies.sh  mac_setup.sh  op.sh  setup.sh  view_model_data.py
tools/sim/: run_bridge.py
